# semantic_mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  claude_code_mcp_config.json  pyproject.toml
src/semantic_mcp/: __init__.py  __main__.py  api_engine.py  api_server.py  api_server_constants.py  log.py  main.py  settings.py
src/semantic_mcp/api_routers/: mcp_handler.py  mcp_handler_schema.py
src/semantic_mcp/backend/: language_model_types.py  mcp_api_server.py  mcp_router.py  mcp_types.py  mq_embedding.py  system_instructions.py
src/semantic_mcp/client/: agent_loop.py  definitions.py  types.py
src/semantic_mcp/middleware/: auth_middleware.py
src/semantic_mcp/services/: embedding.py  encryption.py  mcp_descriptor.py  types.py  vector_store.py
src/semantic_mcp/settings/: __init__.py  api_server.py  credentials.py  vector_store.py
