[project]
name = "semantic-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "milkymap", email = "ibrahima.elmokhtar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.1",
    "click>=8.2.1",
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.4",
    "google-genai>=1.18.0",
    "mcp>=1.9.2",
    "openai>=1.82.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "pyzmq>=26.4.0",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.3",
]

[project.scripts]
semantic-mcp = "semantic_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

